--- a/templates/mainapp/product.html
+++ b/templates/mainapp/product.html
@@ -20,10 +20,34 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Table Start -->
 
-   
-    <!-- Table End -->
+    <!--- Category of products --->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-4">
+                {% for category in categories %}
+                <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="overflow-hidden">
+                        <a href="{% url 'mainapp:products_category' category.slug %}">
+                        <img class="img-fluid w-100 h-100" src="{{ category.image_url }}" alt="">
+                        </a>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-between bg-light p-4">
+                        <h5 class="text-truncate me-3 mb-0">{{ category.name }}</h5>
+                        <a class="btn btn-square btn-outline-primary border-2 border-white flex-shrink-0" href="{% url 'mainapp:products_category' category.slug %}"><i class="fa fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+                  <div class="col-md-12">
+                     <a class="btn btn-secondary" href="{% url 'mainapp:all-products' %}">See More</a>
+                  </div>
+            </div>
+        </div>
+    </div>
+    <!--- Category of products end --->
+
 
 
     
