--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <!-- Navbar Start -->
     <div class="container-fluid nav-bar bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
-            <a href="" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
+            <a href="/" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
                 <h1 class="text-primary m-0">METAL</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -18,7 +18,6 @@
                         <div class="dropdown-menu fade-up m-0">
                             <a href="{% url 'mainapp:booking' %}" class="dropdown-item">Booking</a>
                             <a href="{% url 'mainapp:team' %}" class="dropdown-item">Technicians</a>
-                            <a href="{% url 'mainapp:testimonial' %}" class="dropdown-item">Testimonial</a>
                             <a href="{% url 'mainapp:contact' %}" class="dropdown-item">Contact</a>
                         </div>
                     </div>
