--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,7 @@
                         <div class="dropdown-menu fade-up m-0">
                             <a href="{% url 'mainapp:booking' %}" class="dropdown-item">Booking</a>
                             <a href="{% url 'mainapp:team' %}" class="dropdown-item">Technicians</a>
+                            <a href="{% url 'mainapp:testimonial' %}" class="dropdown-item">Testimonial</a>
                             <a href="{% url 'mainapp:contact' %}" class="dropdown-item">Contact</a>
                         </div>
                     </div>
