--- a/templates/mainapp/products.html
+++ b/templates/mainapp/products.html
@@ -61,21 +61,18 @@
                         <th scope="col">Icon</th>
                       </tr>
                     </thead>
-                    <tbody>
+                      <div id="alerts"></div>
+                    <tbody class="productcont">
                     {% for product in products %}
-                      <tr>
-                        <td>{{ product.name }}</td>
+                      <tr class="product">
+                        <td class="productname">{{ product.name }}</td>
                         <td>{{ product.size }}</td>
                         <td>{{ product.theory }}</td>
                         <td>{{ product.manfacturer }}</td>
                         <td>{{ product.unit }}</td>
-                        <td>${{ product.price_cash }}</td>
+                        <td class="price">{{ product.price_cash }}</td>
                         <td>
-                            <a href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
-                                <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
-                            </svg>
-                            </a>
+                            <button class="addtocart">Add</button>
                         </td>
                       </tr>
                     {% endfor %}
@@ -105,6 +102,65 @@
         {% endif %}
         </ul>
     </nav>
+
 <!--Products with Category end -->
 <!-- Products end  --->
+
+
+<!--<main>-->
+<!--     &lt;!&ndash; Start DEMO HTML (Use the following code into your project)&ndash;&gt;-->
+<!--&lt;!&ndash;    <div class="container">&ndash;&gt;-->
+<!--&lt;!&ndash;   <h1>Simple JavaScript Shopping Cart</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;   <p>Simplified 'add to cart' functionality. Uses Javascript&ndash;&gt;-->
+<!--&lt;!&ndash;   and WebStorage API/Cookies to remember cart data converted to JSON format.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;   <p>Click 'Empty Cart' button to remove session cookies from browser.</p>&ndash;&gt;-->
+<!--   <div id="alerts"></div>-->
+<!--<div class="productcont">-->
+<!--    {% for product in products %}-->
+<!--        <div class="product">-->
+<!--            <h3 class="productname">{{ product.name }}</h3>-->
+<!--            <p>Product description excerpt...</p>-->
+<!--            <p class="price">${{ product.price_cash }}</p>-->
+<!--            <button class="addtocart">Add To Cart</button>-->
+<!--        </div>-->
+<!--        {% endfor %}-->
+<!--</div>-->
+<!--</main>-->
+<!--<div class="cart-container">-->
+<!--  <h2>Cart</h2>-->
+<!--  <table>-->
+<!--    <thead>-->
+<!--      <tr>-->
+<!--      <th><strong>Product</strong></th>-->
+<!--      <th><strong>Price</strong></th>-->
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody id="carttable">-->
+<!--    </tbody>-->
+<!--  </table>-->
+<!--  <hr>-->
+<!--  <table id="carttotals">-->
+<!--    <tr>-->
+<!--      <td><strong>Items</strong></td>-->
+<!--      <td><strong>Total</strong></td>-->
+<!--    </tr>-->
+<!--    <tr>-->
+<!--      <td>x <span id="itemsquantity">0</span></td>-->
+
+<!--      <td>$<span id="total">0</span></td>-->
+<!--    </tr>-->
+<!--  </table>-->
+
+
+<!--  <div class="cart-buttons">-->
+<!--    <button id="emptycart">Empty Cart</button>-->
+<!--    <button id="checkout">Checkout</button>-->
+<!--  </div>-->
+<!--</div>-->
+<!-- partial -->
+
+     <!-- END EDMO HTML (Happy Coding!)-->
+
 {% endblock body %}
+
+
